--- a/assets1/index1.html
+++ b/assets1/index1.html
@@ -55,7 +55,7 @@
                                     margin-inline-end: -52px;
                                     margin-inline-start: -54px;" 
                                     src="./img/Playbutton.png"></ul>
-                    <ul><a style="text-decoration: none;"href="">Play Demo</a=></ul>
+                    <ul><a style="text-decoration: none; color: black;"href="">Play Demo</a=></ul>
                 </div>
                 
             </div>
